--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -13,3 +13,8 @@ jobs:
         run: |
           node -v
           npm -v
+      - name: python command
+        run: |
+          import platform
+          print(platform.procesor())
+        shell: python
