--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -7,14 +7,17 @@ jobs:
   run-shell-command:
     runs-on: ubuntu-latest
     steps:
-      - name: echo a string
-        run: echo "Hello World"
-      - name: multiline script
-        run: |
-          node -v
-          npm -v
       - name: python command
         run: |
           import platform
           print(platform.processor())
         shell: python
+
+  run-windows-command:
+    runs-on: windows-latest
+    steps:
+      - name: Directory PowerShell
+        run: Get-Location
+      - name: Directory Bash
+        run: pwd
+        shell: bash
