--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -15,6 +15,8 @@ jobs:
 
   run-windows-command:
     runs-on: windows-latest
+    needs:
+      - run-shell-command
     steps:
       - name: Directory PowerShell
         run: Get-Location
