--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -7,7 +7,11 @@ jobs:
   run-github-actions:
     runs-on: ubuntu-latest
     steps:
-      - name: Simple JS Actions
+      - name: List Files
+        run: |
+          pwd
+          ls
+      - name: Simple JS Action
         id: greet
         uses: actions/hello-world-javascript-action@v1.1
         with:
