--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,16 +1,12 @@
 name: Checkout Action
 
 on:
-  - push
+  - pull_request
 
 jobs:
   run-github-actions:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-        with:
-          ref: master
       - name: List Files
         run: |
           pwd
