--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Default ENV Variables
-        runs: |
+        run: |
           echo "GITHUB_REF: ${GITHUB_REF}"
           echo "RUNNER_NAME: ${RUNNER_NAME}"
           echo "WF_ENV: ${WF_ENV}"
