--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -5,23 +5,19 @@ env:
   WF_ENV: Available to all jobs
 
 jobs:
-  log-env:
-    runs-on: ubuntu-latest
-    env:
-      JOB_ENV: Available to all steps in log-env job
-    steps:
-      - name: Log ENV Variables
-        env:
-          STEP_ENV: Available to only this step
-        run: |
-          echo "WF_ENV: ${WF_ENV}"
-          echo "JOB_ENV: ${JOB_ENV}"
-          echo "STEP_ENV: ${STEP_ENV}"
-  log-default-env:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Default ENV Variables
-        run: |
-          echo "GITHUB_REF: ${GITHUB_REF}"
-          echo "RUNNER_NAME: ${RUNNER_NAME}"
-          echo "WF_ENV: ${WF_ENV}"
+  create-issue:
+      runs-on: ubuntu-latest
+          permissions:
+            issues: write
+          steps:
+            - name: Create issue using REST API
+              run: |
+                curl --request POST \
+                --url https://api.github.com/repos/${{ github.repository }}/issues \
+                --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+                --header 'content-type: application/json' \
+                --data '{
+                  "title": "Automated issue for commit: ${{ github.sha }}",
+                  "body": "This issue was automatically created by the GitHub Action workflow **${{ github.workflow }}**. \n\n The commit hash was: _${{ github.sha }}_."
+                  }' \
+                --fail
