random file added fix

--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -27,4 +27,5 @@ jobs:
           ls -a
           git add -A
           git commit -m"Random file"
+          echo "TEST ======================"
           git push
