random file added fix

--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -28,4 +28,4 @@ jobs:
           git add -A
           git commit -m"Random file"
           echo "TEST ======================"
-          git push
+          git push origin master
