--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -15,7 +15,7 @@ jobs:
           pwd
           ls -a
           git init
-          git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/windbird123/github-actions-test.git"
+          git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
           git config --global user.email "my-bot@bot.com"
           git config --global user.name "my-bot"
           git fetch
@@ -27,5 +27,4 @@ jobs:
           ls -a
           git add -A
           git commit -m"Random file"
-          echo "TEST ======================"
-          git push origin master
+          git push
