--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -25,6 +25,6 @@ jobs:
           ls -a
           echo $RANDOM >> random.txt
           ls -a
-          git add -A
+          git add random.txt
           git commit -m"Random file"
           git push
