random file added fix4

--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,14 +1,12 @@
-name: ENV Variables
+name: adds random file
 
 on: push
 env:
   WF_ENV: Available to all jobs
 
 jobs:
-  create-issue:
+  adds-random-file:
     runs-on: ubuntu-latest
-    permissions:
-      issues: write
     steps:
       - name: Push a random file
         run: |
@@ -25,6 +23,6 @@ jobs:
           ls -a
           echo $RANDOM >> random.txt
           ls -a
-          git add random.txt
+          git add -A
           git commit -m"Random file"
           git push
