--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,28 +1,17 @@
-name: adds random file
+name: using encrypted file
 
 on: push
-env:
-  WF_ENV: Available to all jobs
 
 jobs:
-  adds-random-file:
+  decrypt-file:
     runs-on: ubuntu-latest
     steps:
-      - name: Push a random file
-        run: |
-          pwd
-          ls -a
-          git init
-          git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
-          git config --global user.email "my-bot@bot.com"
-          git config --global user.name "my-bot"
-          git fetch
-          git checkout master
-          git branch --set-upstream-to=origin/master
-          git pull
-          ls -a
-          echo $RANDOM >> random.txt
-          ls -a
-          git add -A
-          git commit -m"Random file"
-          git push
+      - uses: actions/checkout@v1
+
+      - name: decrypt file
+        run: gpg --quiet --batch --yes --decrypt --passphrase="$PASS_PHRASE" --output $HOME/api_key.json api_key.json.gpg
+        env:
+          PASS_PHRASE: ${{ secrets.PASS_PHRASE }}
+
+      - name: Print our file content
+        run: cat $HOME/api_key.json
