--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,17 +1,20 @@
-name: using encrypted file
-
+name: Context testing
 on: push
 
 jobs:
-  decrypt-file:
+  dump_contexts_to_log:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-
-      - name: decrypt file
-        run: gpg --quiet --batch --yes --decrypt --passphrase="$PASS_PHRASE" --output $HOME/api_key.json api_key.json.gpg
-        env:
-          PASS_PHRASE: ${{ secrets.PASS_PHRASE }}
-
-      - name: Print our file content
-        run: cat $HOME/api_key.json
+      - name: Dump GitHub context
+        id: github_context_step
+        run: echo '${{ toJSON(github) }}'
+      - name: Dump job context
+        run: echo '${{ toJSON(job) }}'
+      - name: Dump steps context
+        run: echo '${{ toJSON(steps) }}'
+      - name: Dump runner context
+        run: echo '${{ toJSON(runner) }}'
+      - name: Dump strategy context
+        run: echo '${{ toJSON(strategy) }}'
+      - name: Dump matrix context
+        run: echo '${{ toJSON(matrix) }}'
