--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -10,4 +10,4 @@ jobs:
           echo ${{ contains('hello', 'll') }}
           echo ${{ startsWith('hello, 'he') }}
           echo ${{ endsWith('hello', 'lo') }}
-          echo ${{ format('Hello {0} {1} {2}', 'world', '!', '!' }}
+          echo ${{ format('Hello {0} {1} {2}', 'world', '!', '!') }}
