--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -8,6 +8,6 @@ jobs:
       - name: dump
         run: |
           echo ${{ contains('hello', 'll') }}
-          echo ${{ startsWith('hello, 'he') }}
+          echo ${{ startsWith('hello', 'he') }}
           echo ${{ endsWith('hello', 'lo') }}
           echo ${{ format('Hello {0} {1} {2}', 'world', '!', '!') }}
