--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,13 +1,23 @@
-name: Function testing
+name: If key
 on: push
 
 jobs:
-  functions:
+  dump_contexts_to_log:
     runs-on: ubuntu-latest
+    if: github.event_name == 'push'
     steps:
-      - name: dump
-        run: |
-          echo ${{ contains('hello', 'll') }}
-          echo ${{ startsWith('hello', 'he') }}
-          echo ${{ endsWith('hello', 'lo') }}
-          echo ${{ format('Hello {0} {1} {2}', 'world', '!', '!') }}
+      - name: Dump GitHub context
+        id: github_context_step
+        run: ecccho '${{ toJSON(github) }}'
+      - name: Dump job context
+        if: failure()
+        run: echo '${{ toJSON(job) }}'
+      - name: Dump steps context
+        if: always()
+        run: echo '${{ toJSON(steps) }}'
+      - name: Dump runner context
+        run: echo '${{ toJSON(runner) }}'
+      - name: Dump strategy context
+        run: echo '${{ toJSON(strategy) }}'
+      - name: Dump matrix context
+        run: echo '${{ toJSON(matrix) }}'
