--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,23 +1,13 @@
-name: If key
+name: Matrix
 on: push
 
 jobs:
-  dump_contexts_to_log:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push'
+  node-version:
     steps:
-      - name: Dump GitHub context
-        id: github_context_step
-        run: ecccho '${{ toJSON(github) }}'
-      - name: Dump job context
-        if: failure()
-        run: echo '${{ toJSON(job) }}'
-      - name: Dump steps context
-        if: always()
-        run: echo '${{ toJSON(steps) }}'
-      - name: Dump runner context
-        run: echo '${{ toJSON(runner) }}'
-      - name: Dump strategy context
-        run: echo '${{ toJSON(strategy) }}'
-      - name: Dump matrix context
-        run: echo '${{ toJSON(matrix) }}'
+      - name: Log node version
+        run: node -v
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '12'
+      - name: Log node version
+        run: node -v
