--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -3,12 +3,18 @@ on: push
 
 jobs:
   node-version:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+        node_version: [8, 10, 12]
+      fail-fast: true
+      max-parallel: 1
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Log node version
         run: node -v
       - uses: actions/setup-node@v1
         with:
-          node-version: '12'
+          node-version: ${{ matrix.node_version }}
       - name: Log node version
         run: node -v
