--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -7,6 +7,9 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest]
         node_version: [8, 10, 12]
+        exclude:
+          - os: ubuntu-latest
+            node_version: 10
       fail-fast: true
       max-parallel: 1
     runs-on: ${{ matrix.os }}
