--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,23 +1,16 @@
-name: Matrix
+name: Container
 on: push
 
 jobs:
-  node-version:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-        node_version: [8, 10, 12]
-        exclude:
-          - os: ubuntu-latest
-            node_version: 10
-      fail-fast: true
-      max-parallel: 1
-    runs-on: ${{ matrix.os }}
+  node-docker:
+    runs-on: ubuntu-latest
+    container:
+      image: node:13.5.0-alpine3.10
+      # volumes:
+      # ports:
+      # options: --cpus 1
     steps:
       - name: Log node version
-        run: node -v
-      - uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node_version }}
-      - name: Log node version
-        run: node -v
+        run: |
+          node -v
+          cat /etc/os-release
