--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -2,7 +2,7 @@ name: Container
 on: push
 
 jobs:
-  node-docker:
+  docker-steps:
     runs-on: ubuntu-latest
     container:
       image: node:13.5.0-alpine3.10
@@ -10,7 +10,17 @@ jobs:
       # ports:
       # options: --cpus 1
     steps:
-      - name: Log node version
+      - name: Default Log node version
         run: |
           node -v
           cat /etc/os-release
+      - name: Step with docker
+        uses: docker://node:12.14.1-alpine3.10
+        with:
+          entrypoint: '/bin/echo'
+          args: 'Hello World'
+      - name: Sencod Log node version
+        uses: docker://node:12.14.1-alpine3.10
+        with:
+          entrypoint: '/usr/local/bin/node'
+          args: '-v'
