--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -24,3 +24,12 @@ jobs:
         with:
           entrypoint: '/usr/local/bin/node'
           args: '-v'
+      - name: checkout code
+        uses: actions/checkout@v1
+      - name: add execute permission to script.sh
+        run: chmod +x script.sh
+      - name: Run my own script
+        uses: docker://node:12.14.1-alpine3.10
+        with:
+          entrypoint: ./script.sh
+          args: 'windbird'
