--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -24,8 +24,7 @@ jobs:
         with:
           entrypoint: '/usr/local/bin/node'
           args: '-v'
-      - name: checkout code
-        uses: actions/checkout@v1
+      - uses: actions/checkout@v1
       - name: add execute permission to script.sh
         run: chmod +x script.sh
       - name: Run my own script
