--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -24,7 +24,9 @@ jobs:
         with:
           entrypoint: '/usr/local/bin/node'
           args: '-v'
-      - uses: actions/checkout@v1
+      - name: checkout code
+        uses: actions/checkout@v1
+        run: node -v
       - name: add execute permission to script.sh
         run: chmod +x script.sh
       - name: Run my own script
