--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -26,9 +26,10 @@ jobs:
           args: '-v'
       - name: checkout code
         uses: actions/checkout@v1
-        run: node -v
       - name: add execute permission to script.sh
         run: chmod +x script.sh
+      - name: list my files
+        run: ls -la
       - name: Run my own script
         uses: docker://node:12.14.1-alpine3.10
         with:
