--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -28,8 +28,11 @@ jobs:
         uses: actions/checkout@v1
       - name: add execute permission to script.sh
         run: chmod +x script.sh
-      - name: list my files
-        run: ls -la
+      - name: List my files
+        uses: docker://node:12.14.1-alpine3.10
+        with:
+          entrypoint: ls
+          args: '-la'
       - name: Run my own script
         uses: docker://node:12.14.1-alpine3.10
         with:
