--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,9 @@
 name: Feature to Dev PR
 on:
   pull_request:
-    branches:
-      - dev
+    branches: [dev]
   push:
-    branches:
-      - dev
+    branches: [dev]
 
 jobs:
   build:
@@ -23,12 +21,12 @@ jobs:
 
       # dev 에 merge 되었을 때는 build 를 추가로 한다.
       - name: build project
-        if: github.event.name == 'push'
+        if: github.event_name == 'push'
         run: npm run build
 
       - run: npm install -g surge
       - name: deploy to staging
-        if: github.event.name == 'push'
+        if: github.event_name == 'push'
         run: nxp surge --project ./build --domain rainy-tank-stage.surge.sh
         env:
           # surge 를 한번 실행한적이 있다면
