--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -7,5 +7,5 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: build project
+      - name: build projects
         run: myecho.sh
