--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -8,4 +8,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: build projects
-        run: myecho.sh
+        run: echo $PATH
+#        run: myecho.sh
