--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: [windbird]
     steps:
       - name: build projects
         run: echo $PATH
